--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -46,8 +46,9 @@
                                  [style.width.px]="imageWidth" 
                                  [style.margin.px]="imageMargin">
                         </td>
-                        <td><a>
-                            {{product.productName}}
+                        <td><a [routerLink]="['/products', product.id]"
+                               [queryParams]="{filterBy: listFilter, showImage: showImage}">
+                                {{product.productName}}
                             </a>
                         </td>
                         <td>{{ product.productCode | lowercase }}</td>
@@ -58,7 +59,7 @@
                             </ai-star>
                        </td>
                        <td>
-                            <a class="btn btn-primary">
+                            <a class="btn btn-primary" [routerLink]="['/products', product.id, 'edit']">
                                 Edit
                             </a>
                         </td>
